--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "test": "vitest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publish":" npm run build && npm publish --access public"
   },
   "files": [
     "dist",
