--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsup index.ts --format cjs,esm --dts",
     "test": "vitest",
     "prepublishOnly": "npm run build",
-    "publish": " npm run build && npm publish --access public"
+    "publish": "npm run build && npm publish --access public"
   },
   "files": [
     "dist",
@@ -43,6 +43,7 @@
     "vitest": "^3.2.2"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "openai": "^5.1.1",
     "zod": "^3.25.56"
   },
