--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   "dependencies": {
     "chalk": "^5.4.1",
     "openai": "^5.1.1",
-    "zod": "^3.25.56"
+    "zod": "^3.25.56",
+    "zod-to-json-schema": "^3.24.5"
   },
   "peerDependencies": {
     "typescript": "^5"
