--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "saafir",
   "version": "1.0.9",
-  "description": "Saafir (سفير) - Güçlü ve esnek AI agent framework'ü",
+  "description": "Saafir (سفير) - Strong and Customizable AI Agent Framework for OpenAI and OpenRouter",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
